<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".activities.AboutActivity">
  
  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:title="@string/about"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    android:theme="@style/ToolbarTheme"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
  
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/page_padding"
      android:orientation="vertical">
  
  
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/developer_information"
        android:textSize="@dimen/h5"/>
  
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Volkan ATALAN"
        android:textSize="@dimen/h3"
        android:textColor="@color/black"/>
  
      <TextView
        android:id="@+id/link1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="volkanatalan35@gmail.com"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
  
      <TextView
        android:id="@+id/link2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="github.com/volkanatalan"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
  
      <TextView
        android:id="@+id/link3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="30dp"
        android:text="linkedin.com/in/volkanatalan"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
  
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/credits"
        android:textSize="@dimen/h5"/>
  
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Low-poly neuronal brain icon"
        android:textSize="@dimen/h2"
        android:textColor="@color/black"
        android:drawableStart="@drawable/chevron_right"/>
  
      <TextView
        android:id="@+id/link4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:text="iconspng.com/image/91900/low-poly-neuronal-brain"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
  
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="File icons made by Dimitry Miroliubov from www.flaticon.com"
        android:textSize="@dimen/h2"
        android:textColor="@color/black"
        android:drawableStart="@drawable/chevron_right"/>
  
      <TextView
        android:id="@+id/link5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:text="flaticon.com/packs/files-8"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
  
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Background vector created by starline from www.freepik.com"
        android:textSize="@dimen/h2"
        android:textColor="@color/black"
        android:drawableStart="@drawable/chevron_right"/>
  
      <TextView
        android:id="@+id/link6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="25dp"
        android:text="freepik.com/free-vector/elegant-white-background-with-shiny-lines_4077186.htm"
        android:textSize="@dimen/h3"
        android:textColor="@color/link"
        android:background="@drawable/bg_link"/>
      
    </LinearLayout>
  </ScrollView>
</LinearLayout>