...
  <string name="cancel">Cancel</string>
  <string name="deleting_memory_is_irreversible_do_you_want_to_proceed">Deleting memory is irreversible. Do you want to
    proceed?
  </string>
  <string name="add_images_allcaps">ADD IMAGES</string>
  <string name="memories">Memories</string>
  <string name="about">About</string>
  <string name="credits">Credits</string>
  <string name="developer_information">Developer Information</string>
  <string name="copied">Copied!</string>
  <string name="remember_something">Remember something!</string>
  <string name="settings">Settings</string>
  <string name="allow_notifications">Allow notifications</string>
...
